--- a/style.css
+++ b/style.css
@@ -44,6 +44,21 @@ body {
 
 /* About Section */
 
+.btn {
+  font-size: 18px;
+  color: #121212 !important;
+  background-image: linear-gradient(
+    to left,
+    oklch(80.8% 0.114 19.571),
+    oklch(70.4% 0.191 22.216)
+  );
+  border-radius: 9999px;
+  padding: 12px 24px;
+}
+.hire-me-btn-container {
+  margin-top: 50px;
+}
+
 .about-sec {
   margin-top: 160px;
   display: flex;
