--- a/style.css
+++ b/style.css
@@ -35,10 +35,17 @@ body {
   position: relative;
   transition: width 0.3s;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem 0;
+  justify-content: center;
 }
 
 .menu-item .text {
   display: none;
+  padding: 10px;
+  font-size: 10px;
 }
 
 .menu-item:hover {
@@ -57,22 +64,53 @@ body {
 
 /* Main Navbar */
 .main-list {
-  list-style-type: none;
+  /* list-style-type: none;
   background-color: black;
   color: aliceblue;
   font-weight: bold;
   font-size: 2rem;
-
+  /* height: 100%;
   display: flex;
   justify-content: space-between;
   padding: 2rem;
-  max-width: 100%;
+  max-width: 100%; */
+  /* height: 100%; */
+
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem 0;
+  list-style: none;
+  margin: 0;
+  background-color: black;
+  color: aliceblue;
+  justify-content: center;
 }
 .nav-bar {
-  max-width: 100%;
+  /* max-width: 100%; */
+  height: 100%;
 }
 .main-list-section {
-  max-width: 100%;
+  /* margin: 0;
+  padding: 0;
+   
+  max-width: 60px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  overflow: auto; */
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 100vh;
+  background-color: black;
+  overflow-y: auto;
+  /* margin: 10px; */
+  /* margin-right: 500px; */
 }
 
 .main-list-name {
@@ -82,7 +120,7 @@ body {
 .main-list-items {
   display: flex;
   justify-content: space-between;
-  max-width: 45%;
+  /* max-width: 45%; */
   margin-right: 3rem;
   gap: 2.4rem;
   flex-wrap: wrap;
@@ -621,6 +659,7 @@ a:active {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  margin: 0 100px;
 }
 
 .skill-reflex {
@@ -793,6 +832,10 @@ oklch(80.8% 0.114 19.571),
 
   .overlay.active {
     display: block;
+  }
+
+  .text a {
+    /* padding: 20px; */
   }
 
   /**/
